--- a/militaryindex.html
+++ b/militaryindex.html
@@ -11,12 +11,12 @@
 </head>
 <body>
   
-<div id="military map"></div>
+<div id="military"></div>
 
 <script type="text/javascript">
 
   var spec2 = "military.vg.json";
-  vegaEmbed('military map', spec2).then(function(result) {
+  vegaEmbed('military', spec2).then(function(result) {
     // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
   }).catch(console.error);
 </script>
