--- a/military.html
+++ b/military.html
@@ -17,7 +17,40 @@
     "url": "https://raw.githubusercontent.com/FIT3179/Vega-Lite/main/3_choropleth_map/js/ne_110m_admin_0_countries.topojson",
     "format": {"type": "topojson", "feature": "ne_110m_admin_0_countries"}
   },
-  "projection": {"type": "equalEarth"},
+  "params": [
+   {"name": "zoom_level",
+    "value": 200,
+    "bind": {
+      "input": "range",
+      "min": 0,
+      "max": 500,
+      "step": 100,
+      "name": "Zoom: "
+    },
+  },
+  {
+   "name": "centre_to",
+   "value": [-24.2, 15],
+   "bind": {
+    "input": "select",
+    "options": [
+      [-100.6, 48],
+      [-59.5, -16.4],
+      [136.3, -26.3],
+      [21.2, 7.2],
+      [21.7, 48],
+      [99, 30],
+    ],
+    "labels": ["North America", "South America", "Australia", "Africa", "Europe", "Asia"],
+    "name": "Map Centre: "
+   }, 
+  }
+  ], 
+  "projection": {
+    "type": "equirectangular",
+    "center": {"expr": "centre_to"},
+    "scale": {"expr": "zoom_level"}
+  },
   "layer": [
     {
       "transform": [
