--- a/Index.html
+++ b/Index.html
@@ -29,7 +29,7 @@
         <!-- pure grid group -->
         <div class="pure-g">
             <div class="pure-u-1-1">
-                <div id="Military" class="vis-container"></div>
+                <div id="vis1" class="vis-container"></div>
             </div>
         </div>
         <!-- end pure grid group -->
